--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -92,8 +92,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Poetry
         uses: dschep/install-poetry-action@v1.2
-      - name: Check tag matches version
-        run: "[[ $(poetry version | cut -d ' ' -f 2) == ${{ github.ref }} ]] && exit 0 || exit 1"
+      - name: Bump poetry version
+        run: poetry version ${{ github.ref }}
       - name: Cache Poetry virtualenv
         uses: actions/cache@v1
         id: cache
