--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,10 @@
 ---
-name: Django CI
+name: Test
 
 on:
   push:
   pull_request:
     branches: [master]
-  release:
-    types: [published]
 
 jobs:
   check:
@@ -80,46 +78,3 @@ jobs:
           repository: djjudas21/camerahub
           tags: testing
           push: false
-
-  publish:
-    if: github.event_name == 'release'
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-      - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.2
-      - name: Parse the git tag
-        id: get_tag
-        run: echo ::set-output name=TAG::$(echo $GITHUB_REF | cut -d / -f 3)
-      - name: Bump poetry version
-        run: poetry version ${{ steps.get_tag.outputs.TAG }}
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Build Python package
-        run: |
-          poetry install
-          poetry build
-      - name: Publish to Docker Hub
-        uses: docker/build-push-action@v1
-        with:
-          username: djjudas21
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: djjudas21/camerahub
-          tag_with_ref: true
-          tags: latest
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
