Enable metrics for databases

--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -61,7 +61,7 @@ spec:
             - name: CAMERAHUB_DB_PORT
               value: "5432"
             - name: CAMERAHUB_DB_ENGINE
-              value: django.db.backends.postgresql
+              value: django_prometheus.db.backends.postgresql
             - name: CAMERAHUB_PROD
               valueFrom:
                 secretKeyRef:
