--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ django-redis = "^4.11"
 django-taggit = "^1"
 poetry-version = "*"
 django-prometheus = "^2.0.0"
+django-simple-history = "^2.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
