--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -30,8 +30,8 @@ spec:
           env:
             - name: CAMERAHUB_DB_USER
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_DB_USER
             - name: CAMERAHUB_DB_PASS
               valueFrom:
@@ -50,32 +50,32 @@ spec:
                   key: CAMERAHUB_SENDGRID_KEY
             - name: CAMERAHUB_DOMAIN
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_DOMAIN
                   optional: true
             - name: CAMERAHUB_EMAIL_USE_TLS
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_USE_TLS
                   optional: true
             - name: CAMERAHUB_EMAIL_USE_SSL
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_USE_SSL
                   optional: true
             - name: CAMERAHUB_EMAIL_HOST
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_HOST
                   optional: true
             - name: CAMERAHUB_EMAIL_HOST_USER
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_HOST_USER
                   optional: true
             - name: CAMERAHUB_EMAIL_HOST_PASSWORD
@@ -86,8 +86,8 @@ spec:
                   optional: true
             - name: CAMERAHUB_EMAIL_PORT
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_HOST_PORT
                   optional: true
             - name: CAMERAHUB_DB_HOST
@@ -100,8 +100,8 @@ spec:
               value: django_prometheus.db.backends.postgresql
             - name: CAMERAHUB_PROD
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_PROD
                   optional: true
           volumeMounts:
