--- a/kubernetes/kustomize/camerahub/kustomization.yaml
+++ b/kubernetes/kustomize/camerahub/kustomization.yaml
@@ -10,8 +10,12 @@ secretGenerator:
     literals:
       - CAMERAHUB_SECRET_KEY=OverrideMe!
       - CAMERAHUB_SENDGRID_KEY=
-      - CAMERAHUB_DB_USER=postgres
       - CAMERAHUB_DB_PASS=postgres
       - CAMERAHUB_ADMIN_EMAIL=admin@example.com
       - CAMERAHUB_ADMIN_PASSWORD=admin
+
+configMapGenerator:
+  - name: camerahub-config
+    literals:
+      - CAMERAHUB_DB_USER=postgres
       - CAMERAHUB_PROD=true
