--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -12,5 +12,10 @@ secretGenerator:
   - name: camerahub-secret
     behavior: merge
     literals:
-      - CAMERAHUB_PROD=false
       - CAMERAHUB_SECRET_KEY=0h^xg)1v7(u4@$0@@5(r4!jd63et8lrl2bq_$fx0zqco8wu&!o
+
+configMapGenerator:
+  - name: camerahub-config
+    behavior: merge
+    literals:
+      - CAMERAHUB_PROD=false
