--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ poetry-version = "*"
 django-prometheus = "^2.0.0"
 django-simple-history = "^2.11.0"
 django-versatileimagefield = "^2.0"
+numpy = "^1.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
