--- a/kubernetes/overlays/preprod/preprod-secret.env.example
+++ b/kubernetes/overlays/preprod/preprod-secret.env.example
@@ -1,1 +1,5 @@
 CAMERAHUB_SECRET_KEY=myprodsecret
+#CAMERAHUB_DB_PASS
+#CAMERAHUB_SENDGRID_KEY
+#CAMERAHUB_EMAIL_BACKEND
+#CAMERAHUB_EMAIL_HOST_PASSWORD
