--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -15,5 +15,7 @@ secretGenerator:
 
 configMapGenerator:
   - name: camerahub-config
-    env: prod-config.env
     behavior: merge
+    literals:
+      - CAMERAHUB_PROD=true
+      - CAMERAHUB_DOMAIN=camerahub.info
