Split out Kubernetes config and secrets (#533)
* Split out Kubernetes config and secrets and model most of the config in the Kustomize files rather than in env files.
* Simplify some Kubernetes bits
* Set new Camerahub Testing url

--- a/kubernetes/kustomize/camerahub/kustomization.yaml
+++ b/kubernetes/kustomize/camerahub/kustomization.yaml
@@ -13,4 +13,9 @@ secretGenerator:
       - CAMERAHUB_DB_PASS=postgres
       - CAMERAHUB_ADMIN_EMAIL=admin@example.com
       - CAMERAHUB_ADMIN_PASSWORD=admin
+
+configMapGenerator:
+  - name: camerahub-config
+    literals:
+      - CAMERAHUB_DB_USER=postgres
       - CAMERAHUB_PROD=true
