--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -4,17 +4,10 @@ kind: Deployment
 metadata:
   name: camerahub
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: camerahub-container
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -22,17 +15,9 @@ spec:
     spec:
       containers:
         - image: djjudas21/camerahub:0.16.0
-          imagePullPolicy: Always
           name: camerahub
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
           env:
-            - name: CAMERAHUB_DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_DB_USER
+            # Secrets first
             - name: CAMERAHUB_DB_PASS
               valueFrom:
                 secretKeyRef:
@@ -55,46 +40,52 @@ spec:
                   name: camerahub-secret
                   key: CAMERAHUB_EMAIL_BACKEND
                   optional: true
-            - name: CAMERAHUB_DOMAIN
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_DOMAIN
-                  optional: true
-            - name: CAMERAHUB_EMAIL_USE_TLS
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_EMAIL_USE_TLS
-                  optional: true
-            - name: CAMERAHUB_EMAIL_USE_SSL
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_EMAIL_USE_SSL
-                  optional: true
-            - name: CAMERAHUB_EMAIL_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_EMAIL_HOST
-                  optional: true
-            - name: CAMERAHUB_EMAIL_HOST_USER
-              valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
-                  key: CAMERAHUB_EMAIL_HOST_USER
-                  optional: true
             - name: CAMERAHUB_EMAIL_HOST_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: camerahub-secret
                   key: CAMERAHUB_EMAIL_HOST_PASSWORD
                   optional: true
+            # then config
+            - name: CAMERAHUB_DB_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_DB_USER            
+            - name: CAMERAHUB_DOMAIN
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_DOMAIN
+                  optional: true
+            - name: CAMERAHUB_EMAIL_USE_TLS
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_EMAIL_USE_TLS
+                  optional: true
+            - name: CAMERAHUB_EMAIL_USE_SSL
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_EMAIL_USE_SSL
+                  optional: true
+            - name: CAMERAHUB_EMAIL_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_EMAIL_HOST
+                  optional: true
+            - name: CAMERAHUB_EMAIL_HOST_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: camerahub-config
+                  key: CAMERAHUB_EMAIL_HOST_USER
+                  optional: true
             - name: CAMERAHUB_EMAIL_PORT
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_EMAIL_HOST_PORT
                   optional: true
             - name: CAMERAHUB_DB_HOST
@@ -107,8 +98,8 @@ spec:
               value: django_prometheus.db.backends.postgresql
             - name: CAMERAHUB_PROD
               valueFrom:
-                secretKeyRef:
-                  name: camerahub-secret
+                configMapKeyRef:
+                  name: camerahub-config
                   key: CAMERAHUB_PROD
                   optional: true
           volumeMounts:
@@ -116,10 +107,6 @@ spec:
               mountPath: /var/www/camerahub/media
               readOnly: false
       dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
       volumes:
       - name: media
         persistentVolumeClaim:
