--- a/kubernetes/kustomize/camerahub/ingress.yaml
+++ b/kubernetes/kustomize/camerahub/ingress.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: camerahub
@@ -9,7 +9,10 @@ spec:
   rules:
     - http:
         paths:
-          - backend:
-              serviceName: camerahub
-              servicePort: 8000
-            path: /
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: camerahub
+                port:
+                  number: 8000
