--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ django-2-collectionfield = "^0.0.4"
 pytest = "^5.2"
 pylint-django = "^2.0.14"
 autopep8 = "^1.5.4"
+pylint = "^2.6.0"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2-binary"]
