--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ numpy = "^1.19.1"
 django-social-share = "^2.0.0"
 django-countries = "^6.1.3"
 django-2-collectionfield = "^0.0.4"
+django-autocomplete-light = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
