--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ django-social-share = "^2.0.0"
 django-countries = "^6.1.3"
 django-2-collectionfield = "^0.0.4"
 django-autocomplete-light = "^3.8.1"
+django-bootstrap-datepicker-plus = "^3.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
