--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ django-countries = "^6.1.3"
 django-2-collectionfield = "^0.0.4"
 django-autocomplete-light = "^3.8.1"
 django-bootstrap-datepicker-plus = "^3.0.5"
+django-geoposition-2 = "^0.3.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
