--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install GDAL for Leaflet
+        run: sudo apt install libgdal-dev
       - name: Install Poetry
         uses: dschep/install-poetry-action@v1.2
       - name: Cache Poetry virtualenv
