Run camerahub from a top level dir

--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -104,7 +104,7 @@ spec:
                   optional: true
           volumeMounts:
             - name: media
-              mountPath: /var/www/camerahub/media
+              mountPath: /camerahub/media
               readOnly: false
       dnsPolicy: ClusterFirst
       volumes:
