Switch to a different poetry action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,19 +30,29 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install GDAL for Leaflet
         run: sudo apt install libgdal-dev
+      #----------------------------------------------
+      #  -----  install & configure poetry  -----      
+      #----------------------------------------------
       - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.3
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v2
-        id: cache
+        uses: snok/install-poetry@v1.1.1
         with:
-          path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install Dependencies
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      #----------------------------------------------
+      #       load cached venv if cache exists      
+      #----------------------------------------------
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      #----------------------------------------------
+      # install dependencies if cache does not exist 
+      #----------------------------------------------
+      - name: Install dependencies
+        run: poetry install --dev
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - name: Run pylint
         run: "poetry run pylint --rcfile=.pylintrc **/*.py"
       - name: Run Tests
@@ -59,20 +69,25 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      # install & configure poetry
       - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.3
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v2
-        id: cache
+        uses: snok/install-poetry@v1.1.1
         with:
-          path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      # load cached venv if cache exists      
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      # install dependencies if cache does not exist 
+      - name: Install dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - name: Build Python package
-        run: |
-          poetry install
-          poetry build
+        run: poetry build
       - name: Build Docker image
         uses: docker/build-push-action@v1
         with:
