Temporarily comment probes until we know why they're failing in prod

--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -109,23 +109,23 @@ spec:
             - name: media
               mountPath: /camerahub/media
               readOnly: false
-          livenessProbe:
-            tcpSocket:
-              port: app-port
-            periodSeconds: 10
-            timeoutSeconds: 3
-          readinessProbe:
-            httpGet:
-              path: /
-              port: app-port
-            periodSeconds: 5
-            timeoutSeconds: 1
-          startupProbe:
-            httpGet:
-              path: /
-              port: app-port
-            failureThreshold: 36
-            periodSeconds: 5
+#          livenessProbe:
+#            tcpSocket:
+#              port: app-port
+#            periodSeconds: 10
+#            timeoutSeconds: 3
+#          readinessProbe:
+#            httpGet:
+#              path: /
+#              port: app-port
+#            periodSeconds: 5
+#            timeoutSeconds: 1
+#          startupProbe:
+#            httpGet:
+#              path: /
+#              port: app-port
+#            failureThreshold: 36
+#            periodSeconds: 5
       dnsPolicy: ClusterFirst
       volumes:
       - name: media
