--- a/helm/camerahub/Chart.yaml
+++ b/helm/camerahub/Chart.yaml
@@ -20,4 +20,9 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: 1.16.0
+appVersion: 0.25.0
+
+dependencies:
+- name: cert-manager
+  version: 1.1.0
+  repository: https://charts.jetstack.io
