--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ django-bootstrap-datepicker-plus = "^3.0.5"
 django-geoposition-2 = "^0.3.11"
 django-leaflet = "^0.27.1"
 djangorestframework = "^3.12.1"
+django-dbbackup = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
