--- a/kubernetes/kustomize/camerahub/pvc.yaml
+++ b/kubernetes/kustomize/camerahub/pvc.yaml
@@ -9,3 +9,14 @@ spec:
   resources:
     requests:
       storage: 8Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: backup
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 8Gi
