Back up to a more suitable dir

--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -110,7 +110,7 @@ spec:
               mountPath: /camerahub/media
               readOnly: false
             - name: backup
-              mountPath: /backup
+              mountPath: /camerahub/backup
               readOnly: false
 #          livenessProbe:
 #            tcpSocket:
