--- a/kubernetes/kustomize/camerahub/pvc.yaml
+++ b/kubernetes/kustomize/camerahub/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: media
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 8Gi
