--- a/helm/camerahub/templates/deployment.yaml
+++ b/helm/camerahub/templates/deployment.yaml
@@ -34,17 +34,107 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: 80
+            - name: app-port
+              containerPort: 8000
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          #livenessProbe:
+          #  httpGet:
+          #    path: /
+          #    port: http
+          #readinessProbe:
+          #  httpGet:
+          #    path: /
+          #    port: http
+          env:
+            # Secrets first
+            - name: CAMERAHUB_DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-secret
+                  key: CAMERAHUB_DB_PASS
+            - name: CAMERAHUB_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-secret
+                  key: CAMERAHUB_SECRET_KEY
+            - name: CAMERAHUB_SENDGRID_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-secret
+                  key: CAMERAHUB_SENDGRID_KEY
+                  optional: true
+            - name: CAMERAHUB_EMAIL_BACKEND
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-secret
+                  key: CAMERAHUB_EMAIL_BACKEND
+                  optional: true
+            - name: CAMERAHUB_EMAIL_HOST_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-secret
+                  key: CAMERAHUB_EMAIL_HOST_PASSWORD
+                  optional: true
+            # then config
+            - name: CAMERAHUB_DB_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_DB_USER            
+            - name: CAMERAHUB_DOMAIN
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_DOMAIN
+                  optional: true
+            - name: CAMERAHUB_EMAIL_USE_TLS
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_EMAIL_USE_TLS
+                  optional: true
+            - name: CAMERAHUB_EMAIL_USE_SSL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_EMAIL_USE_SSL
+                  optional: true
+            - name: CAMERAHUB_EMAIL_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_EMAIL_HOST
+                  optional: true
+            - name: CAMERAHUB_EMAIL_HOST_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_EMAIL_HOST_USER
+                  optional: true
+            - name: CAMERAHUB_EMAIL_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_EMAIL_HOST_PORT
+                  optional: true
+            - name: CAMERAHUB_DB_HOST
+              value: postgres
+            - name: CAMERAHUB_DB_NAME
+              value: camerahub
+            - name: CAMERAHUB_DB_PORT
+              value: "5432"
+            - name: CAMERAHUB_DB_ENGINE
+              value: django_prometheus.db.backends.postgresql
+            - name: CAMERAHUB_PROD
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .Release.Name }}-config
+                  key: CAMERAHUB_PROD
+                  optional: true
+          volumeMounts:
+            - name: media
+              mountPath: /camerahub/media
+              readOnly: false
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -59,3 +149,11 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      #dnsPolicy: ClusterFirst
+      volumes:
+      - name: media
+        persistentVolumeClaim:
+          claimName: media
+      - name: backup
+        persistentVolumeClaim:
+          claimName: backup
