--- a/helm/camerahub/values.yaml
+++ b/helm/camerahub/values.yaml
@@ -2,10 +2,19 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+settings:
+  CAMERAHUB_SECRET_KEY: OverrideMe!
+  CAMERAHUB_DB_USER: postgres
+  CAMERAHUB_DB_PASS: postgres
+  CAMERAHUB_ADMIN_EMAIL: admin@example.com
+  CAMERAHUB_ADMIN_PASSWORD: admin
+  CAMERAHUB_DB_USER: postgres
+  CAMERAHUB_PROD: true
+
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: djjudas21/camerahub
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -38,13 +47,13 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8000
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths: []
@@ -52,6 +61,11 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+storage:
+  storageClassName:
+    files: ""
+    database: ""
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
