--- a/helm/camerahub/Chart.yaml
+++ b/helm/camerahub/Chart.yaml
@@ -26,3 +26,6 @@ dependencies:
 - name: cert-manager
   version: 1.1.0
   repository: https://charts.jetstack.io
+- name: redis
+  version: 12.4.0
+  repository: https://charts.bitnami.com/bitnami
