Use upstream chart for postgres-ha

--- a/helm/camerahub/Chart.yaml
+++ b/helm/camerahub/Chart.yaml
@@ -29,3 +29,6 @@ dependencies:
 - name: redis
   version: 12.4.0
   repository: https://charts.bitnami.com/bitnami
+- name: postgresql-ha
+  version: 6.3.6
+  repository: https://charts.bitnami.com/bitnami
