--- a/helm/camerahub/templates/secret.yaml
+++ b/helm/camerahub/templates/secret.yaml
@@ -4,7 +4,6 @@ metadata:
   name: {{ .Release.Name }}-secret
 data:
   CAMERAHUB_SECRET_KEY: {{ .Values.settings.CAMERAHUB_SECRET_KEY | b64enc }}
-  CAMERAHUB_DB_USER: {{ .Values.settings.CAMERAHUB_DB_USER | b64enc }}
-  CAMERAHUB_DB_PASS: {{ .Values.settings.CAMERAHUB_DB_PASS | b64enc }}
+  CAMERAHUB_DB_PASS: {{ .Values.global.postgresql.password | b64enc }}
   CAMERAHUB_ADMIN_EMAIL: {{ .Values.settings.CAMERAHUB_ADMIN_EMAIL | b64enc }}
   CAMERAHUB_ADMIN_PASSWORD: {{ .Values.settings.CAMERAHUB_ADMIN_PASSWORD | b64enc }}
