--- a/helm/camerahub/templates/secret.yaml
+++ b/helm/camerahub/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}-secret
 data:
-  CAMERAHUB_SECRET_KEY: {{ .Values.settings.CAMERAHUB_SECRET_KEY | b64enc }}
+  CAMERAHUB_SECRET_KEY: {{ .Values.camerahub.secretKey | b64enc }}
   CAMERAHUB_DB_PASS: {{ .Values.global.postgresql.password | b64enc }}
-  CAMERAHUB_ADMIN_EMAIL: {{ .Values.settings.CAMERAHUB_ADMIN_EMAIL | b64enc }}
-  CAMERAHUB_ADMIN_PASSWORD: {{ .Values.settings.CAMERAHUB_ADMIN_PASSWORD | b64enc }}
+  CAMERAHUB_ADMIN_EMAIL: {{ .Values.camerahub.adminEmail | b64enc }}
+  CAMERAHUB_ADMIN_PASSWORD: {{ .Values.camerahub.adminPassword | b64enc }}
