--- a/helm/camerahub/values.yaml
+++ b/helm/camerahub/values.yaml
@@ -84,6 +84,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    # cert-manager.io/issuer:
   hosts:
     - host: chart-example.local
       paths: []
