--- a/helm/camerahub/values.yaml
+++ b/helm/camerahub/values.yaml
@@ -14,6 +14,7 @@ redis:
   usePassword: false
   cluster:
     enabled: true
+    # Additional slaves, excluding the master
     slaveCount: 1
   master:
     persistence:
@@ -29,6 +30,7 @@ redis:
 # Settings for Postgresql-ha subchart
 postgresql-ha:
   postgresql:
+    # Totel replicas
     replicaCount: 2
   persistence:
     storageClass: ""
@@ -41,6 +43,7 @@ camerahub:
   adminPassword: admin
   production: true
 
+# Replicas of CameraHub app server
 replicaCount: 2
 
 image:
@@ -84,15 +87,19 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-    # cert-manager.io/issuer:
+    cert-manager.io/issuer: ""
+    cert-manager.io/cluster-issuer: ""
   hosts:
     - host: chart-example.local
-      paths: []
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+      paths:
+        path: /
+        pathType: Prefix
+  tls:
+  - secretName: ingress-tls
+    hosts:
+    - chart-example.local
 
+# Storage for CameraHub media and backups
 storage:
   storageClass: ""
   size: 8Gi
