--- a/helm/camerahub/templates/ingress.yaml
+++ b/helm/camerahub/templates/ingress.yaml
@@ -15,28 +15,25 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+    {{- if .Values.ingress.tls }}
+    kubernetes.io/tls-acme: "true"
+    {{- end }}
 spec:
   {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
     - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
+      - {{ .Values.camerahub.domain | quote }}
+        secretName: ingress-tls
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .Values.camerahub.domain | quote }}
       http:
         paths:
-          - path: {{ .paths.path }}
-            pathType: {{ .paths.pathType }}
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: {{ $fullName }}-app
                 port:
                   number: {{ $svcPort }}
-    {{- end }}
   {{- end }}
