Flesh out chart metadata

--- a/charts/camerahub/Chart.yaml
+++ b/charts/camerahub/Chart.yaml
@@ -1,21 +1,13 @@
 apiVersion: v2
 name: camerahub
-description: A Helm chart for Kubernetes
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+description: App for cataloguing vintage cameras, lenses, films, negatives & prints
+home: https://camerahub.info/
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -29,3 +21,20 @@ dependencies:
 - name: postgresql-ha
   version: 6.3.6
   repository: https://charts.bitnami.com/bitnami
+keywords:
+  - python
+  - docker
+  - kubernetes
+  - django
+  - database
+  - photography
+  - lenses
+  - films
+  - negatives
+  - camerahub
+sources:
+  - https://github.com/camerahub/camerahub
+maintainers:
+  - name: Jonathan Gazeley
+    url: https://jonathangazeley.com/
+icon: https://github.com/camerahub/camerahub/blob/master/schema/static/svg/camera.svg
